Opdracht ASPEC 06 afgemaakt

--- a/Semester6_DiceCode4/Semester6_DiceCode4/appsettings.json
+++ b/Semester6_DiceCode4/Semester6_DiceCode4/appsettings.json
@@ -1,9 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ASPEC06DB;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
-  },
-  "AllowedHosts": "*"
-}
+} 
